Demonstrate full identity function

--- a/test.tt
+++ b/test.tt
@@ -1,8 +1,8 @@
-|- id in pi[x:`1] `1
-~> lam[x] x
+|- id in pi[s:U] pi [x:`1] `1
+~> lam[s] lam[x] x
 
 |- test in `1
-~> (id <>)
+~> ((id `1) <>)
 
 |- reflection-example in pi[p: (Id U `0 `1)] `0
 ~> lam[p] reflect p in <>
