Make <> the canonical constructur id proofs judgmentally justified
We're getting more extensional now!

--- a/test.tt
+++ b/test.tt
@@ -7,11 +7,11 @@
 |- reflection-example in pi[p: Id(U; `0; `1)] `0
 ~> lam[p] reflect p in <>
 
-|- reflTest in Id(`1; <>; <>)
-~> refl
+|- trivialTest in Id(`1; <>; <>)
+~> <>
 
 |- binderEqTest in Id(U; pi[x:`1]`1; pi[x:`1]`1)
-~> binderEq(refl; [x] refl)
+~> binderEq(<>; [x] <>)
 
 |- boolId in pi[x:`2]`2
 ~> lam[x] boolElim([_]`2; tt; ff; x)
@@ -23,4 +23,4 @@
 ~> lam[x] (boolNot (boolNot x))
 
 |- boolIdEqualsBoolNotNot in Id(pi[x:`2]`2; boolId; boolNotNot)
-~> funext([u] boolElim([b] Id(`2; (boolId b); (boolNotNot b)); refl; refl; u))
+~> funext([u] boolElim([b] Id(`2; (boolId b); (boolNotNot b)); <>; <>; u))
