--- a/test.tt
+++ b/test.tt
@@ -11,7 +11,7 @@
 ~> <>
 
 |- binderEqTest in Id(U; pi[x:`1]`1; pi[x:`1]`1)
-~> binderEq(<>; [x] <>)
+~> binderEq(pi[x:`1]`1; pi[x:`1]`1; <>; [x] <>)
 
 |- boolId in pi[x:`2]`2
 ~> lam[x] boolElim([_]`2; tt; ff; x)
